@@ -3,6 +3,7 @@
 #include "libuhuru-config.h"
 
 #include <stdio.h>
+#include <errno.h>
 #include <stdlib.h>
 #include <glib.h>
 #include <string.h>
@@ -17,7 +18,9 @@ static void ping_handler(struct ipc_manager *m, void *data)
 {
   struct client *cl = (struct client *)data;
 
-  fprintf(stderr, "callback cb_ping\n");
+#ifdef DEBUG
+  g_log(NULL, G_LOG_LEVEL_DEBUG, "ping_handler");
+#endif
 
   ipc_manager_send_msg(cl->manager, IPC_MSG_ID_PONG, IPC_NONE);
 }
@@ -25,16 +28,13 @@ static void ping_handler(struct ipc_manager *m, void *data)
 static void scan_callback(struct uhuru_report *report, void *callback_data)
 {
   struct client *cl = (struct client *)callback_data;
-  char status[32], action[32];
 
-  sprintf(status, "%d", report->status);
-  sprintf(action, "%d", report->action);
   ipc_manager_send_msg(cl->manager, IPC_MSG_ID_SCAN_FILE, 
 		       IPC_STRING, report->path, 
-		       IPC_STRING, status,
+		       IPC_INT32, report->status,
 		       IPC_STRING, report->mod_name,
 		       IPC_STRING, report->mod_report,
-		       IPC_STRING, action,
+		       IPC_INT32, report->action,
 		       IPC_NONE);
 }
 
@@ -44,8 +44,11 @@ static void scan_handler(struct ipc_manager *m, void *data)
   char *path;
   struct uhuru_scan *scan;
 
+#ifdef DEBUG
+  g_log(NULL, G_LOG_LEVEL_DEBUG, "scan_handler");
+#endif
+
   ipc_manager_get_arg_at(m, 0, IPC_STRING, &path);
-  fprintf(stderr, "callback cb_scan path: %s\n", path);
 
   scan = uhuru_scan_new(cl->uhuru, path, UHURU_SCAN_RECURSE);
 
@@ -60,17 +63,24 @@ static void scan_handler(struct ipc_manager *m, void *data)
 
   ipc_manager_send_msg(cl->manager, IPC_MSG_ID_SCAN_END, IPC_NONE);
 
-  /* FIXME: should not be there: the UI must close the connexion when processing SCAN_END message, then the server will close */
-  close(cl->sock);
+  if (close(cl->sock) < 0) {
+    g_log(NULL, G_LOG_LEVEL_WARNING, "closing socket %d failed (%s)", cl->sock, strerror(errno));
+  }
 
-  fprintf(stderr, "callback cb_scan end\n");
+  cl->sock = -1;
+
+#ifdef DEBUG
+  g_log(NULL, G_LOG_LEVEL_DEBUG, "scan_handler finished");
+#endif
 }
 
 static void cb_stat(struct ipc_manager *m, void *data)
 {
   struct client *cl = (struct client *)data;
 
-  fprintf(stderr, "callback cb_stat\n");
+#ifdef DEBUG
+  g_log(NULL, G_LOG_LEVEL_DEBUG, "stat_handler");
+#endif
 }
 
 struct client *client_new(int client_sock, struct uhuru *uhuru)
@@ -87,7 +97,21 @@ struct client *client_new(int client_sock, struct uhuru *uhuru)
   return cl;
 }
 
+void client_free(struct client *cl)
+{
+  ipc_manager_free(cl->manager);
+
+  free(cl);
+}
+
 int client_process(struct client *cl)
 {
-  return ipc_manager_receive(cl->manager);
+  int ret;
+
+  if (cl->sock < 0)
+    return 0;
+
+  ret = ipc_manager_receive(cl->manager);
+
+  return ret;
 }
